[gd_scene load_steps=3 format=3 uid="uid://cw68bghf7paod"]

[ext_resource type="Script" path="res://scripts/mainGame.gd" id="1_fxxsq"]
[ext_resource type="PackedScene" uid="uid://sx5wc835xoa0" path="res://characters/base_character.tscn" id="2_ihepi"]

[node name="mainGame" type="Node"]
script = ExtResource("1_fxxsq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="left" type="Button" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
z_index = -2
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
flat = true

[node name="right" type="Button" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
z_index = -2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Container" type="Container" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="base character" parent="CanvasLayer/Control/Container" instance=ExtResource("2_ihepi")]
position = Vector2(-10, -14)
scale = Vector2(3.41126, 3.41126)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.898039, 1, 1)

[node name="timer" type="Node" parent="."]

[node name="trashSpawn" type="Timer" parent="timer"]
autostart = true

[node name="trash" type="Node2D" parent="."]

[node name="deleteBarrier" type="Node2D" parent="."]
position = Vector2(0, 648)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="deleteBarrier"]
position = Vector2(578, 0)
scale = Vector2(58.8, 1)

[connection signal="button_down" from="CanvasLayer/Control/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="CanvasLayer/Control/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="CanvasLayer/Control/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="CanvasLayer/Control/right" to="." method="_on_right_button_up"]
[connection signal="timeout" from="timer/trashSpawn" to="." method="_on_trash_spawn_timeout"]
